# Co-operative-Path-Following

./: .gitignore  README.md  circle_experiment.m  circle_experiment.m~  circle_line.m  circle_simulation.m  inverted_pendulum.m  line_circle.m  line_circle.m~  multi_circle_simulation.m  multi_path_following.m  path_following.m  path_following_circle.m  plotting_test.m  pyproject.toml  qeweqw.m  requirements.txt  root10d.m  single_circle_simulation.m  three_agent_circle  three_agent_circle.m  three_agent_circle.m~  three_agent_circle_timecord.m  three_agent_circle_timecord.m~  three_agent_circle_timecord_experiment.m  three_agent_line_timecord.m  three_agent_line_timecord_experiment.m~  time_circle_simulation.m  time_circle_simulation2.m  time_circle_simulation_V3.m  time_circle_simulation_V3.m~  time_circle_simulation_V4.m  time_coordination_circle_simulation.m  time_coordination_line.m  time_coordination_line_simulation.asv  time_coordination_line_simulation.m  trial.m  trial2.m  trials.m  trials_solving_eqn.m  (+9 more)
cooperative_path_following/: __init__.py  agent.py  lqr.py  path.py  simulation.py  visualization.py
examples/: line_to_circle.py  path_following_basic.py  single_circle.py  three_agent_circle.py  three_agent_line.py  two_agent_circle.py  two_agent_line.py  video_three_agent_circle.py
tests/: test_agent.py  test_lqr.py  test_path.py  test_simulation.py
