[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cooperative-path-following"
version = "1.0.0"
description = "Co-operative path following using LQR control for multi-agent systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
